# MinxiongHydroCast

./: .gitignore  LICENSE  README.md  env.example  environment.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  cwa-live-contract.yml  official-live-contract.yml
data/: README.md
data/samples/: event_expansion_queue.json  event_split_manifest.json  event_weather_context.json  external_asset_manifest.json  flood_labels.example.json  flood_risk_events.csv  flood_sensors.csv  grid_specs.csv  location_reference.csv  pumping_stations.csv  qpe_gauge_validation_status.json  radar_event_windows.json  radar_pixels.csv  radar_source_manifest.json  radar_tensor_spec.json  rain_monitor.csv  rainfall_alerts.csv  shadow_evidence.example.json  weather_context_source_review.json
deploy/prometheus/: alertmanager.yml  floodcast.rules.yml  minxiong-hydrocast.rules.yml  prometheus.yml
deploy/single-host/: install-actions-runner.sh  install-monitoring.sh  install-user-host.sh
deploy/systemd/: floodcast-minxiong-api.service  floodcast-minxiong-collector.service  minxiong-hydrocast-api.service  minxiong-hydrocast-collector.service
deploy/systemd-user/: floodcast-minxiong-alert-receiver.service  floodcast-minxiong-alertmanager.service  floodcast-minxiong-api.service  floodcast-minxiong-backup.service  floodcast-minxiong-backup.timer  floodcast-minxiong-collector.service  floodcast-minxiong-collector.timer  floodcast-minxiong-prometheus.service  floodcast-minxiong-runner.service  floodcast-minxiong-shadow.service  floodcast-minxiong-shadow.timer  minxiong-hydrocast-alert-receiver.service  minxiong-hydrocast-alertmanager.service  minxiong-hydrocast-api.service  minxiong-hydrocast-backup.service  minxiong-hydrocast-backup.timer  minxiong-hydrocast-collector.service  minxiong-hydrocast-collector.timer  minxiong-hydrocast-event-discover.service  minxiong-hydrocast-event-discover.timer  minxiong-hydrocast-prometheus.service  minxiong-hydrocast-runner.service  minxiong-hydrocast-shadow.service  minxiong-hydrocast-shadow.timer
docs/: baseline_results.md  completion_plan.md  continuous_event_evidence.md  data_contracts.md  data_source_register.md  decision_authority.md  deployment_status.md  event_splits.md  incident_response.md  migration_notes.md  model_strategy.md  nowcastnet_migration.md  operational_use.md  project_identity.md  project_scope.md  radar_data_sources.md  radar_event_windows.md  radar_source_adapters.md  radar_tensor_conversion.md  research_dataset.md  roadmap.md  rollback.md  single_host_operations.md  spatial_alignment.md  tasks.md
docs/model_cards/: minxiong_chiayi_baseline.md
scripts/: run_demo.py
src/floodcastminxiong/: __init__.py  config.py
src/floodcastminxiong/ingestion/: cwa_event_collector.py  cwa_file_api.py  cwa_grid.py  cwa_history.py  cwa_history_data.py  cwa_rainfall_api.py  http_client.py  hydrological_data.py  radar_sources.py  rainfall_alerts.py  shelters.py  wra_flood_sensor_api.py  wra_rainfall_alert_api.py
src/floodcastminxiong/models/: evaluation.py  event_splits.py  nowcastnet_adapter.py  radar_tensor.py
src/floodcastminxiong/operations/: alert_receiver.py  api.py  backup.py  collector.py  discord_notifications.py  features.py  health.py  locations.py  schemas.py  shadow.py  snapshot_store.py
src/floodcastminxiong/pipelines/: baseline_evaluation.py  demo.py  location_reference.py  nowcastnet_smoke.py  qpe_gauge_validation.py  radar_event_summary.py  radar_source_adapters.py  radar_tensor_conversion.py  tensor_baseline_evaluation.py  torch_baseline_evaluation.py  torch_baseline_training.py
src/floodcastminxiong/spatial/: admin.py  locations.py
src/floodcastminxiong/validation/: flood_labels.py  normalization.py  schemas.py
src/floodcasttw/: __init__.py  config.py
src/floodcasttw/ingestion/: cwa_event_collector.py  cwa_file_api.py  cwa_grid.py  cwa_history.py  cwa_history_data.py  hydrological_data.py  radar_sources.py  rainfall_alerts.py  shelters.py
src/floodcasttw/io/: csv_utils.py
src/floodcasttw/models/: __init__.py  baselines.py  evaluation.py  event_splits.py  metrics.py  nowcastnet_adapter.py  radar_tensor.py
src/floodcasttw/pipelines/: __init__.py  baseline_evaluation.py  demo.py  location_reference.py  nowcastnet_smoke.py  qpe_gauge_validation.py  radar_event_summary.py  radar_source_adapters.py  radar_tensor_conversion.py  tensor_baseline_evaluation.py  torch_baseline_evaluation.py  torch_baseline_training.py
src/floodcasttw/spatial/: __init__.py  coordinates.py  grid.py  locations.py
src/floodcasttw/validation/: quality.py  schemas.py
src/minxionghydrocast/: __init__.py  cli.py  config.py
src/minxionghydrocast/ingestion/: cwa_event_collector.py  cwa_file_api.py  cwa_grid.py  cwa_history.py  cwa_history_data.py  cwa_rainfall_api.py  http_client.py  hydrological_data.py  radar_sources.py  rainfall_alerts.py  shelters.py  source_adapter.py  wra_flood_sensor_api.py  wra_rainfall_alert_api.py
tests/: test_alert_receiver.py  test_backup.py  test_baselines.py  test_cli.py  test_config.py  test_cwa_event_collector.py  test_cwa_file_api.py  test_cwa_grid.py  test_cwa_history.py  test_cwa_history_data.py  test_cwa_rainfall_api.py  test_dataset_build.py  test_discord_notifications.py  test_evaluation.py  test_event_discovery.py  test_event_review.py  test_event_splits.py  test_flood_labels.py  test_http_client.py  test_hydrological_data.py  test_metrics.py  test_nowcastnet_adapter.py  test_operations_api.py  test_operations_collector.py  test_operations_features.py  test_operations_health.py  test_operations_locations.py  test_qpe_gauge_validation.py  test_radar_event_summary.py  test_radar_source_adapters.py  test_radar_sources.py  test_radar_tensor_conversion.py  test_rainfall_alerts.py  test_run_summary.py  test_shadow.py  test_shelters.py  test_snapshot_store.py  test_spatial.py  test_tensor_baseline_evaluation.py  test_torch_baseline_evaluation.py  (+4 more)
tests/fixtures/: README.md  cwa_o_a0002_001.json  wra_iow_catalog.json  wra_iow_latest.json  wra_rainfall_warning.json
(+42 files in other folders)
