[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floodcasttw"
version = "0.1.0"
description = "Taiwan flood-risk data pipeline and nowcasting baseline toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "KageRyo" }
]
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "playwright>=1.48",
  "python-docx>=1.1",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
model = [
  "scikit-learn>=1.5",
  "torch>=2.2",
]

[project.scripts]
floodcasttw-demo = "floodcasttw.pipelines.demo:main"
floodcasttw-event-split-check = "floodcasttw.models.event_splits:main"
floodcasttw-evaluate-baselines = "floodcasttw.pipelines.baseline_evaluation:main"
floodcasttw-rainfall-alerts = "floodcasttw.ingestion.rainfall_alerts:main"
floodcasttw-hydrology = "floodcasttw.ingestion.hydrological_data:main"
floodcasttw-cwa-download = "floodcasttw.ingestion.cwa_file_api:main"
floodcasttw-cwa-history-data-download = "floodcasttw.ingestion.cwa_history_data:main"
floodcasttw-cwa-event-plan = "floodcasttw.ingestion.cwa_event_collector:main"
floodcasttw-cwa-grid-inspect = "floodcasttw.ingestion.cwa_grid:main"
floodcasttw-cwa-history-list = "floodcasttw.ingestion.cwa_history:main"
floodcasttw-locations = "floodcasttw.pipelines.location_reference:main"
floodcasttw-nowcastnet-smoke = "floodcasttw.pipelines.nowcastnet_smoke:main"
floodcasttw-qpe-gauge-validate = "floodcasttw.pipelines.qpe_gauge_validation:main"
floodcasttw-radar-event-summary = "floodcasttw.pipelines.radar_event_summary:main"
floodcasttw-radar-source-check = "floodcasttw.ingestion.radar_sources:main"
floodcasttw-radar-tensor-convert = "floodcasttw.pipelines.radar_tensor_conversion:main"
floodcasttw-shelters = "floodcasttw.ingestion.shelters:main"
floodcasttw-tensor-baseline-evaluate = "floodcasttw.pipelines.tensor_baseline_evaluation:main"
floodcasttw-torch-baseline-evaluate = "floodcasttw.pipelines.torch_baseline_evaluation:main"
floodcasttw-train-torch-baseline = "floodcasttw.pipelines.torch_baseline_training:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
