[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floodcast-minxiong"
version = "0.1.0"
description = "Minxiong-first flood-risk data pipeline and rainfall-nowcasting toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "KageRyo" }
]
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "playwright>=1.48",
  "pydantic>=2.9,<3",
  "python-docx>=1.1",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
model = [
  "scikit-learn>=1.5",
  "torch>=2.2",
]

[project.scripts]
floodcast-minxiong-demo = "floodcastminxiong.pipelines.demo:main"
floodcast-minxiong-event-split-check = "floodcastminxiong.models.event_splits:main"
floodcast-minxiong-evaluate-baselines = "floodcastminxiong.pipelines.baseline_evaluation:main"
floodcast-minxiong-rainfall-alerts = "floodcastminxiong.ingestion.rainfall_alerts:main"
floodcast-minxiong-hydrology = "floodcastminxiong.ingestion.hydrological_data:main"
floodcast-minxiong-cwa-download = "floodcastminxiong.ingestion.cwa_file_api:main"
floodcast-minxiong-cwa-history-data-download = "floodcastminxiong.ingestion.cwa_history_data:main"
floodcast-minxiong-cwa-event-plan = "floodcastminxiong.ingestion.cwa_event_collector:main"
floodcast-minxiong-cwa-grid-inspect = "floodcastminxiong.ingestion.cwa_grid:main"
floodcast-minxiong-cwa-history-list = "floodcastminxiong.ingestion.cwa_history:main"
floodcast-minxiong-locations = "floodcastminxiong.pipelines.location_reference:main"
floodcast-minxiong-label-audit = "floodcastminxiong.validation.flood_labels:main"
floodcast-minxiong-nowcastnet-smoke = "floodcastminxiong.pipelines.nowcastnet_smoke:main"
floodcast-minxiong-operations = "floodcastminxiong.operations.collector:main"
floodcast-minxiong-serve = "floodcastminxiong.operations.api:main"
floodcast-minxiong-shadow-report = "floodcastminxiong.operations.shadow:main"
floodcast-minxiong-qpe-gauge-validate = "floodcastminxiong.pipelines.qpe_gauge_validation:main"
floodcast-minxiong-radar-event-summary = "floodcastminxiong.pipelines.radar_event_summary:main"
floodcast-minxiong-radar-source-check = "floodcastminxiong.ingestion.radar_sources:main"
floodcast-minxiong-radar-tensor-convert = "floodcastminxiong.pipelines.radar_tensor_conversion:main"
floodcast-minxiong-shelters = "floodcastminxiong.ingestion.shelters:main"
floodcast-minxiong-tensor-baseline-evaluate = "floodcastminxiong.pipelines.tensor_baseline_evaluation:main"
floodcast-minxiong-torch-baseline-evaluate = "floodcastminxiong.pipelines.torch_baseline_evaluation:main"
floodcast-minxiong-train-torch-baseline = "floodcastminxiong.pipelines.torch_baseline_training:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
